@@ -1,3 +1,9 @@
+2021-XX-XX 4.2.2:
+
+	Bugfixes:
+
+	hl : fixed debugging of `catch` blocks (#10109)
+
 2021-02-26 4.2.1:
 
 	General improvements:
